include_directories(C:/msys64/mingw64/include)
add_executable(sigtool sigtool.cpp)
add_executable(benchmark_sig benchmark_sig.cpp)

if(WIN32)
    target_link_libraries(sigtool PRIVATE cryptopp crypto ws2_32 crypt32 advapi32)
    target_link_libraries(benchmark_sig PRIVATE cryptopp crypto ws2_32 crypt32 advapi32)
else()
    target_link_libraries(sigtool PRIVATE cryptopp crypto pthread m)
    target_link_libraries(benchmark_sig PRIVATE cryptopp crypto pthread m)
endif()